# CoinGas

./: .env  .gitignore  README.md  pyproject.toml
CoinGas/backend/: db.py  historical.py  main.py  prediction.py  run.py
CoinGas/backend/scheduler/: __init__.py  collect.py
CoinGas/frontend/: README.md  index.html  tailwind.config.ts
CoinGas/frontend/src/: App.css  App.tsx  index.css
CoinGas/frontend/src/components/: Dashboard.tsx  FeeIndicator.tsx  Footer.tsx  GasCard.tsx  Header.tsx
CoinGas/frontend/src/pages/: Historical.tsx  Index.tsx
CoinGas/frontend/src/services/: gasService.ts  historicalGasService.ts
CoinGas/frontend/src/types/: gas.ts
scheduler/: collect.py
