[project]
name = "coingas"
version = "0.1.0"
description = ""
authors = [
    {name = "Spookytacoman",email = "danydominguez@live.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "websockets (>=12.0,<13.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
